# golden-plate

./: .gitattributes  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
config/: kiosk-controller.sample.json
scripts/: install.sh  kiosk-session.sh  status.sh  uninstall.sh
site/: index.html
src/kiosk_controller/: main.py
systemd/: .xinitrc  golden-plate.service  kiosk-controller.service  kiosk-monitor.service  kiosk-monitor.timer  kiosk-web.service  kiosk.service
