[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kiosk-controller"
version = "2.1.0"
description = "Kiosk Controller for AIDA64 panel discovery and Firefox kiosk control"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "PhiWag97"}]
dependencies = []

[project.scripts]
kiosk-controller = "kiosk_controller.main:main"
