[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "golden-plate"
version = "0.2.0"
description = "Kiosk Controller for AIDA64 panel with Xorg + Openbox + Chromium"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "PhiWag97"}]
dependencies = []
